[project]
name = "python-mouse-move"
version = "0.1.0"
description = ""
authors = [
    {name = "Douglas Lopes",email = "d.lopes.nascimento@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "pyautogui (>=0.9.54,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
